k8s/config/oss/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-fabric-symphony-v1-target
  failurePolicy: Fail
  name: mtarget.kb.io
  rules:
  - apiGroups:
    - fabric.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - targets
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-solution-symphony-v1-instance
  failurePolicy: Fail
  name: minstance.kb.io
  rules:
  - apiGroups:
    - solution.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - instances
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-solution-symphony-v1-instancehistory
  failurePolicy: Fail
  name: minstancehistory.kb.io
  rules:
  - apiGroups:
    - solution.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - instancehistories
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-solution-symphony-v1-solutionversion
  failurePolicy: Fail
  name: msolutionversion.kb.io
  rules:
  - apiGroups:
    - solution.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - solutionversions
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-solution-symphony-v1-solution
  failurePolicy: Fail
  name: msolution.kb.io
  rules:
  - apiGroups:
    - solution.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - solutions
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-workflow-symphony-v1-activation
  failurePolicy: Fail
  name: mactivation.kb.io
  rules:
  - apiGroups:
    - workflow.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - activations
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-workflow-symphony-v1-campaignversion
  failurePolicy: Fail
  name: mcampaignversion.kb.io
  rules:
  - apiGroups:
    - workflow.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - campaignversions
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-workflow-symphony-v1-campaign
  failurePolicy: Fail
  name: mcampaign.kb.io
  rules:
  - apiGroups:
    - workflow.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - campaigns
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-federation-symphony-v1-catalogversion
  failurePolicy: Fail
  name: mcatalogversion.kb.io
  rules:
  - apiGroups:
    - federation.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - catalogversions
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-federation-symphony-v1-catalog
  failurePolicy: Fail
  name: mcatalog.kb.io
  rules:
  - apiGroups:
    - federation.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - catalogs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-federation-symphony-v1-catalogversionevalexpression
  failurePolicy: Fail
  name: mcatalogversionevalexpression.kb.io
  rules:
  - apiGroups:
    - federation.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - catalogversionevalexpressions
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-monitor-symphony-v1-diagnostic
  failurePolicy: Fail
  name: mdiagnostic.kb.io
  rules:
  - apiGroups:
    - monitor.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - diagnostics
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-fabric-symphony-v1-target
  failurePolicy: Fail
  name: vtarget.kb.io
  rules:
  - apiGroups:
    - fabric.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - targets
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-solution-symphony-v1-instance
  failurePolicy: Fail
  name: vinstance.kb.io
  rules:
  - apiGroups:
    - solution.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - instances
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-solution-symphony-v1-instancehistory
  failurePolicy: Fail
  name: vinstancehistory.kb.io
  rules:
  - apiGroups:
    - solution.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - instancehistories
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-solution-symphony-v1-solutionversion
  failurePolicy: Fail
  name: vsolutionversion.kb.io
  rules:
  - apiGroups:
    - solution.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - solutionversions
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-solution-symphony-v1-solution
  failurePolicy: Fail
  name: vsolution.kb.io
  rules:
  - apiGroups:
    - solution.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - solutions
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-workflow-symphony-v1-activation
  failurePolicy: Fail
  name: vactivation.kb.io
  rules:
  - apiGroups:
    - workflow.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - activations
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-workflow-symphony-v1-campaignversion
  failurePolicy: Fail
  name: vcampaignversion.kb.io
  rules:
  - apiGroups:
    - workflow.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - campaignversions
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-workflow-symphony-v1-campaign
  failurePolicy: Fail
  name: vcampaign.kb.io
  rules:
  - apiGroups:
    - workflow.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - campaigns
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-federation-symphony-v1-catalogversion
  failurePolicy: Fail
  name: vcatalogversion.kb.io
  rules:
  - apiGroups:
    - federation.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - catalogversions
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-federation-symphony-v1-catalog
  failurePolicy: Fail
  name: vcatalog.kb.io
  rules:
  - apiGroups:
    - federation.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - catalogs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-federation-symphony-v1-catalogversionevalexpression
  failurePolicy: Fail
  name: vcatalogversionevalexpression.kb.io
  rules:
  - apiGroups:
    - federation.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - catalogversionevalexpressions
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-monitor-symphony-v1-diagnostic
  failurePolicy: Fail
  name: mdiagnostic.kb.io
  rules:
  - apiGroups:
    - monitor.symphony
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - diagnostics
  sideEffects: None
